add-ons/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
  name: minio
  namespace: minio-operator
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ptisma.online
    - www.ptisma.online
    secretName: ptisma-online-tls
  rules:
  - host: ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: "/minio/"
          backend:
            service:
              name: console
              port:
                number: 9090
  - host: www.ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: "/minio/"
          backend:
            service:
              name: console
              port:
                number: 9090
